# Stuk

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  stuk.md
.github/workflows/: publish.yml
benches/: Cargo.toml
benches/benches/: actions_bench.rs  core_bench.rs  layout_bench.rs  manifest_bench.rs  text_bench.rs
crates/stuk/: Cargo.toml
crates/stuk-accessibility/: Cargo.toml
crates/stuk-accessibility/src/: lib.rs
crates/stuk-actions/: Cargo.toml
crates/stuk-actions/src/: lib.rs
crates/stuk-cli/: Cargo.toml
crates/stuk-cli/src/: build.rs  bundle.rs  doctor.rs  main.rs  project.rs  runtime.rs  source_install.rs  templates.rs
crates/stuk-cli/src/bundle/: metadata.rs  stage.rs
crates/stuk-core/: Cargo.toml
crates/stuk-core/src/: accessibility.rs  accessibility_validation.rs  app.rs  async_state.rs  control_accessibility.rs  control_elements.rs  control_render.rs  control_render_extras.rs  control_render_tests.rs  element.rs  element_conversions.rs  focus.rs  layout_accessibility.rs  layout_elements.rs  lib.rs  list_elements.rs  lower.rs  measure.rs  media_elements.rs  media_render.rs  navigation.rs  option_render.rs  pagination.rs  reconcile.rs  session.rs  state.rs  surface_elements.rs  surface_render.rs  task.rs  window_chrome_render.rs
crates/stuk-devtools/: Cargo.toml
crates/stuk-devtools/src/: accessibility.rs  bundle.rs  element.rs  layout_metrics.rs  lib.rs  manifest.rs  manifest_tests.rs  performance.rs  platform.rs  preview.rs
crates/stuk-layout/: Cargo.toml
crates/stuk-layout/src/: flex.rs  grid.rs  lib.rs  responsive.rs
crates/stuk-manifest/: Cargo.toml
crates/stuk-manifest/src/: lib.rs  tests.rs  validation.rs
crates/stuk-platform/: Cargo.toml
crates/stuk-platform-android/: Cargo.toml
crates/stuk-platform-android/src/: lib.rs
crates/stuk-platform-ios/: Cargo.toml
crates/stuk-platform-ios/src/: lib.rs
crates/stuk-platform-macos/: Cargo.toml
crates/stuk-platform-macos/src/: desktop_files.rs  desktop_services.rs  lib.rs  single_instance.rs
crates/stuk-platform-shell/: Cargo.toml
crates/stuk-platform-shell/src/: lib.rs
crates/stuk-platform-staccato/: Cargo.toml
crates/stuk-platform-staccato/src/: lib.rs
crates/stuk-platform-wayland/: Cargo.toml
crates/stuk-platform-wayland/src/: blur.rs  desktop_files.rs  desktop_services.rs  ext-background-effect-v1.xml  lib.rs  single_instance.rs
crates/stuk-platform-web/: Cargo.toml
crates/stuk-platform-web/src/: lib.rs
crates/stuk-platform-windows/: Cargo.toml
crates/stuk-platform-windows/src/: desktop_files.rs  desktop_services.rs  lib.rs
crates/stuk-platform/src/: backend.rs  integration.rs  lib.rs  material.rs  session.rs  wayland_background_effect.rs  wayland_background_effect_protocol.rs
crates/stuk-render/: Cargo.toml
crates/stuk-render/src/: display_list.rs  gpu.rs  image.wgsl  lib.rs  rect_pipeline.rs  rounded_rect.wgsl
crates/stuk-settings/: Cargo.toml
crates/stuk-settings/src/: lib.rs  schema.rs  store.rs  tests.rs  toml_schema.rs
crates/stuk-style/: Cargo.toml
crates/stuk-style/src/: lib.rs
crates/stuk-text/: Cargo.toml
crates/stuk-text/src/: history.rs  lib.rs  movement.rs  tests.rs
crates/stuk-web-runtime/: Cargo.toml
crates/stuk-web-runtime/src/: lib.rs
crates/stuk-webview/: Cargo.toml
crates/stuk-webview/host/linux/: CMakeLists.txt  app.cc  app.h  handler.cc  handler.h  main.cc  osr_handler.cc  osr_handler.h
crates/stuk-webview/src/: lib.rs  osr.rs  osr_host.rs  osr_protocol.rs
crates/stuk-widgets/: Cargo.toml
crates/stuk-widgets/src/: app_shell.rs  async_view.rs  chrome_widgets.rs  command_palette.rs  composite_widgets.rs  controls.rs  data_widgets.rs  feedback.rs  layout_widgets.rs  lib.rs  media_widgets.rs  mvp.rs  navigation.rs  settings_page.rs  surface_widget.rs  text_widgets.rs  virtual_list.rs
crates/stuk/src/: input.rs  lib.rs
docs/: async.md  examples.md  getting-started.md  implementation-guide.md
examples/counter/: Cargo.toml  Stuk.toml
examples/counter/src/: main.rs
examples/hello/: Cargo.toml  Stuk.toml
examples/hello/src/: main.rs
examples/notes/: Cargo.toml  Stuk.toml
examples/notes/src/: main.rs
examples/settings/: Cargo.toml  Stuk.toml
examples/settings/src/: main.rs
examples/shell-panel/: Cargo.toml  Stuk.toml
examples/shell-panel/src/: main.rs
examples/split-view/: Cargo.toml  Stuk.toml
examples/split-view/src/: main.rs
examples/web-runtime/: Cargo.toml  Stuk.toml
examples/web-runtime/src/: main.rs
examples/web-runtime/ui/: app.js  index.html  styles.css
scripts/: publish.sh
specs/: stuk.md  stuk_pages.md
test-app/: AGENTS.md  Cargo.toml  Stuk.toml
test-app/src/: actions.rs  app.rs  main.rs  settings.rs  state.rs
test-app/src/views/: main_window.rs
tests/: manifest_integration.rs
tests/integration/: Cargo.toml
tests/integration/src/: actions_integration.rs  core_integration.rs  layout_integration.rs  lib.rs  settings_integration.rs  style_integration.rs  text_integration.rs
