[workspace]
resolver = "3"
members = [
    "crates/stuk",
    "crates/stuk-actions",
    "crates/stuk-core",
    "crates/stuk-devtools",
    "crates/stuk-layout",
    "crates/stuk-render",
    "crates/stuk-style",
    "crates/stuk-text",
    "crates/stuk-widgets",
    "crates/stuk-platform",
    "crates/stuk-platform-staccato",
    "crates/stuk-platform-wayland",
    "crates/stuk-platform-windows",
    "crates/stuk-platform-macos",
    "crates/stuk-accessibility",
    "crates/stuk-settings",
    "crates/stuk-manifest",
    "crates/stuk-cli",
    "examples/counter",
    "examples/hello",
    "examples/notes",
    "examples/settings",
    "examples/shell-panel",
    "examples/split-view",
]
default-members = [
    "crates/stuk-cli",
    "examples/hello",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
stuk = { path = "crates/stuk" }
stuk-actions = { path = "crates/stuk-actions" }
stuk-core = { path = "crates/stuk-core" }
stuk-devtools = { path = "crates/stuk-devtools" }
stuk-layout = { path = "crates/stuk-layout" }
stuk-render = { path = "crates/stuk-render" }
stuk-style = { path = "crates/stuk-style" }
stuk-text = { path = "crates/stuk-text" }
stuk-widgets = { path = "crates/stuk-widgets" }
stuk-platform = { path = "crates/stuk-platform" }
stuk-platform-staccato = { path = "crates/stuk-platform-staccato" }
stuk-platform-wayland = { path = "crates/stuk-platform-wayland" }
stuk-platform-windows = { path = "crates/stuk-platform-windows" }
stuk-platform-macos = { path = "crates/stuk-platform-macos" }
stuk-accessibility = { path = "crates/stuk-accessibility" }
stuk-settings = { path = "crates/stuk-settings" }
stuk-manifest = { path = "crates/stuk-manifest" }

accesskit = "0.24.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
glyphon = "0.11.0"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
wgpu = "29.0.3"
winit = "0.31.0-beta.2"
