[workspace]
resolver = "3"
members = [
    "crates/stuk",
    "crates/stuk-actions",
    "crates/stuk-core",
    "crates/stuk-devtools",
    "crates/stuk-layout",
    "crates/stuk-render",
    "crates/stuk-style",
    "crates/stuk-text",
    "crates/stuk-widgets",
    "crates/stuk-platform",
    "crates/stuk-platform-shell",
    "crates/stuk-platform-staccato",
    "crates/stuk-platform-wayland",
    "crates/stuk-platform-windows",
    "crates/stuk-platform-macos",
    "crates/stuk-platform-android",
    "crates/stuk-platform-ios",
    "crates/stuk-platform-web",
    "crates/stuk-accessibility",
    "crates/stuk-settings",
    "crates/stuk-manifest",
    "crates/stuk-cli",
    "examples/notes",
    "tests/integration",
    "benches",
]
default-members = [
    "crates/stuk-cli",
    "examples/notes",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lantharos/stuk"
homepage = "https://github.com/Lantharos/stuk"
authors = ["The Stuk Authors"]

[workspace.dependencies]
stuk = { path = "crates/stuk", version = "0.1.0" }
stuk-actions = { path = "crates/stuk-actions", version = "0.1.0" }
stuk-core = { path = "crates/stuk-core" }
stuk-devtools = { path = "crates/stuk-devtools" }
stuk-layout = { path = "crates/stuk-layout", version = "0.1.0" }
stuk-render = { path = "crates/stuk-render", version = "0.1.0" }
stuk-style = { path = "crates/stuk-style", version = "0.1.0" }
stuk-text = { path = "crates/stuk-text" }
stuk-widgets = { path = "crates/stuk-widgets" }
stuk-platform = { path = "crates/stuk-platform", version = "0.1.0" }
stuk-platform-shell = { path = "crates/stuk-platform-shell", version = "0.1.0" }
stuk-platform-staccato = { path = "crates/stuk-platform-staccato" }
stuk-platform-wayland = { path = "crates/stuk-platform-wayland" }
stuk-platform-windows = { path = "crates/stuk-platform-windows" }
stuk-platform-macos = { path = "crates/stuk-platform-macos" }
stuk-platform-android = { path = "crates/stuk-platform-android" }
stuk-platform-ios = { path = "crates/stuk-platform-ios" }
stuk-platform-web = { path = "crates/stuk-platform-web" }
stuk-accessibility = { path = "crates/stuk-accessibility", version = "0.1.0" }
stuk-settings = { path = "crates/stuk-settings" }
stuk-manifest = { path = "crates/stuk-manifest" }

accesskit = "0.24.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
ashpd = { version = "0.13.11", features = ["global_shortcuts"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.5"
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
futures-util = "0.3.31"
global-hotkey = "0.8.0"
glyphon = "0.11.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
keyring-core = "1.0.0"
ksni = { version = "0.3.4", features = ["blocking"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
toml = "1.1.2"
tray-icon = { version = "0.24.0", default-features = false }
wgpu = "29.0.3"
windows-native-keyring-store = "1.1.0"
windows-registry = "0.6.1"
winit = "0.31.0-beta.2"
x11rb = "0.13.2"
