[package]
publish = false
name = "stuk-benches"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "text_bench"
harness = false

[[bench]]
name = "manifest_bench"
harness = false

[[bench]]
name = "actions_bench"
harness = false

[dependencies]
criterion.workspace = true
stuk-core.workspace = true
stuk-layout.workspace = true
stuk-text.workspace = true
stuk-actions.workspace = true
stuk-manifest.workspace = true