[package]
name = "stuk-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glyphon.workspace = true
stuk-accessibility.workspace = true
stuk-actions.workspace = true
stuk-layout.workspace = true
stuk-platform.workspace = true
stuk-render.workspace = true
stuk-settings.workspace = true
stuk-style.workspace = true
pollster.workspace = true
thiserror.workspace = true
