[package]
name = "stuk-devtools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
stuk-core.workspace = true
stuk-layout.workspace = true
stuk-manifest.workspace = true
stuk-platform.workspace = true
stuk-style.workspace = true
toml.workspace = true

[dev-dependencies]
stuk-widgets.workspace = true
