[package]
name = "stuk-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
pollster.workspace = true
raw-window-handle.workspace = true
stuk-accessibility.workspace = true
stuk-actions.workspace = true
stuk-layout.workspace = true
stuk-render.workspace = true
stuk-style.workspace = true
thiserror.workspace = true
winit.workspace = true
