[package]
name = "stuk-platform"
description = "Cross-platform window, input, clipboard, tray, autostart, global-shortcut, and deep-link primitives for the Stuk app framework"
keywords = ["stuk", "ui", "platform", "desktop", "window"]
categories = ["gui", "os"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
pollster.workspace = true
raw-window-handle.workspace = true
stuk-accessibility.workspace = true
stuk-actions.workspace = true
stuk-layout.workspace = true
stuk-render.workspace = true
stuk-style.workspace = true
thiserror.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
