[package]
name = "stuk-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
glyphon.workspace = true
image.workspace = true
stuk-layout.workspace = true
stuk-style.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
