[package]
name = "stuk-render"
description = "GPU display-list renderer (wgpu + glyphon) used by the Stuk app framework"
keywords = ["stuk", "ui", "renderer", "wgpu", "gpu"]
categories = ["gui", "rendering"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
bytemuck.workspace = true
glyphon.workspace = true
image.workspace = true
stuk-layout.workspace = true
stuk-style.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
