[package]
name = "stuk-web-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared CEF runtime detection, installation, and management for Stuk"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
