[package]
name = "stuk-webview"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CEF-backed webview window support for Stuk apps"

[dependencies]
raw-window-handle.workspace = true
serde_json.workspace = true
stuk.workspace = true
stuk-platform.workspace = true
stuk-style.workspace = true
stuk-web-runtime.workspace = true
thiserror.workspace = true
winit.workspace = true
x11rb.workspace = true
