[package]
name = "stuk-widgets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
stuk-actions.workspace = true
stuk-core.workspace = true
stuk-layout.workspace = true
stuk-platform.workspace = true
stuk-settings.workspace = true
stuk-style.workspace = true
