[package]
name = "stuk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
stuk-accessibility.workspace = true
stuk-actions.workspace = true
stuk-core.workspace = true
stuk-devtools.workspace = true
stuk-layout.workspace = true
stuk-manifest.workspace = true
stuk-platform.workspace = true
stuk-platform-macos.workspace = true
stuk-platform-staccato.workspace = true
stuk-platform-wayland.workspace = true
stuk-platform-windows.workspace = true
stuk-render.workspace = true
stuk-settings.workspace = true
stuk-style.workspace = true
stuk-text.workspace = true
stuk-widgets.workspace = true
